--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dev_dependencies:
     sdk: flutter
   
   url_launcher: ^6.3.1
-  flutter_sms: ^2.3.2
+  # flutter_sms: ^2.3.2
   flutter_contacts: ^1.1.2
   permission_handler: ^11.3.0
   image_picker: ^0.8.4+7
